@@ -8,6 +8,11 @@ User-visible changes:
    - 'simix/breakpoint' is now 'debug/breakpoint'
    - 'clean-atexit' is now 'debug/clean-atexit'
 
+S4U:
+- Functions Mailbox::get() and Mailbox::get_async() are now templated with the
+  type of the pointee. Untyped functions are deprecated. Use Mailbox::get<void>()
+  or Mailbox::get_async<void>() if you really want to play with void*.
+
 ----------------------------------------------------------------------------
 
 SimGrid (3.26) December 15. 2020
